[package]
name = "rs-lines2page2gz"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.itertools]
version = "0.13.0"
default-features = false
features = [
	"use_alloc",
]

[dependencies.flate2]
version = "1.0.34"
default-features = false
features = [
	"rust_backend",
]
